# penelope-api

./: .dockerignore  .env.example  .gitignore  API_README.md  API_SPEC.md  DOCKER.md  Dockerfile  main.py  pyproject.toml
api/: __init__.py  config.py  database.py  filter_values.py  models.py  schemas.py
api/routers/: filters.py  pantone.py  wovens.py
scripts/: load_data.py
